--- a/Phones/Views/ModelTable/Phones.cshtml
+++ b/Phones/Views/ModelTable/Phones.cshtml
@@ -5,7 +5,7 @@
     WebGrid grid = new WebGrid(Model);
 }
 
-@grid.GetHtml(columns: grid.Columns(grid.Column("ID", "ID"),
+@grid.GetHtml("table",columns: grid.Columns(grid.Column("ID", "ID"),
                                     grid.Column("Name", "Наименование"),
-                                    grid.Column("CompanyID" ,header: "Компания", format: item => ViewBag.Companies.Find(item.CompanyID).Name)))
+                                    grid.Column("Company.Name",header: "Компания")))
 
