Добавил добавление телефонов и компаний.

--- a/Phones/Views/ModelTable/Phones.cshtml
+++ b/Phones/Views/ModelTable/Phones.cshtml
@@ -8,4 +8,5 @@
 @grid.GetHtml("table",columns: grid.Columns(grid.Column("ID", "ID"),
                                     grid.Column("Name", "Наименование"),
                                     grid.Column("Company.Name",header: "Компания")))
+<p><a class="btn btn-default" href="~/ModelTable/AddPhone">Создать</a></p>
 
