--- a/Phones/Views/ModelTable/Companies.cshtml
+++ b/Phones/Views/ModelTable/Companies.cshtml
@@ -10,3 +10,4 @@
                                     grid.Column("Location", "Штаб-квартира"),
                                     grid.Column("DateOfFoundation", "Дата основания", format: item => item.DateOfFoundation.Date.ToLongDateString()),
                                     grid.Column("Active" ,header: "Работает", format: item => item.Active ? "Да" : "Нет")))
+<p><a class="btn btn-default" href="~/ModelTable/AddCompany">Создать</a></p>
