--- a/Phones/Content/Site.css
+++ b/Phones/Content/Site.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿#addform {
+    display: none;
+}
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -13,5 +17,5 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 300px;
 }
